feat: runs lambda in docker compose
