# api/templates/openapi.json
@@ -6516,7 +6516,154 @@
             "title": "DataAssetUpdate"
          },
          "DataAssetView": {
-            "properties": {},
+            "properties": {
+               "data_asset_id": {
+                  "anyOf": [
+                     {
+                        "type": "integer"
+                     },
+                     {
+                        "type": "null"
+                     }
+                  ],
+                  "title": "Data Asset Id"
+               },
+               "acquisition_id": {
+                  "anyOf": [
+                     {
+                        "type": "integer"
+                     },
+                     {
+                        "type": "null"
+                     }
+                  ],
+                  "title": "Acquisition Id"
+               },
+               "subject_id": {
+                  "anyOf": [
+                     {
+                        "type": "integer"
+                     },
+                     {
+                        "type": "null"
+                     }
+                  ],
+                  "title": "Subject Id"
+               },
+               "process_id": {
+                  "anyOf": [
+                     {
+                        "type": "integer"
+                     },
+                     {
+                        "type": "null"
+                     }
+                  ],
+                  "title": "Process Id"
+               },
+               "subject_procedure_id": {
+                  "anyOf": [
+                     {
+                        "type": "integer"
+                     },
+                     {
+                        "type": "null"
+                     }
+                  ],
+                  "title": "Subject Procedure Id"
+               },
+               "acquisition_data": {
+                  "additionalProperties": true,
+                  "type": "object",
+                  "title": "Acquisition Data"
+               },
+               "processes_data": {
+                  "additionalProperties": true,
+                  "type": "object",
+                  "title": "Processes Data"
+               },
+               "instrument_name": {
+                  "anyOf": [
+                     {
+                        "type": "string",
+                        "maxLength": 254
+                     },
+                     {
+                        "type": "null"
+                     }
+                  ],
+                  "title": "Instrument Name"
+               },
+               "instrument_data": {
+                  "additionalProperties": true,
+                  "type": "object",
+                  "title": "Instrument Data"
+               },
+               "data_asset_location": {
+                  "anyOf": [
+                     {
+                        "type": "string",
+                        "maxLength": 254
+                     },
+                     {
+                        "type": "null"
+                     }
+                  ],
+                  "title": "Data Asset Location"
+               },
+               "data_asset_name": {
+                  "anyOf": [
+                     {
+                        "type": "string",
+                        "maxLength": 254
+                     },
+                     {
+                        "type": "null"
+                     }
+                  ],
+                  "title": "Data Asset Name"
+               },
+               "data_asset_data": {
+                  "additionalProperties": true,
+                  "type": "object",
+                  "title": "Data Asset Data"
+               },
+               "data_asset_external_links": {
+                  "additionalProperties": true,
+                  "type": "object",
+                  "title": "Data Asset External Links"
+               },
+               "subject_name": {
+                  "anyOf": [
+                     {
+                        "type": "string",
+                        "maxLength": 254
+                     },
+                     {
+                        "type": "null"
+                     }
+                  ],
+                  "title": "Subject Name"
+               },
+               "subject_data": {
+                  "additionalProperties": true,
+                  "type": "object",
+                  "title": "Subject Data"
+               },
+               "subject_procedures_data": {
+                  "items": {
+                     "additionalProperties": true,
+                     "type": "object"
+                  },
+                  "type": "array",
+                  "title": "Subject Procedures Data"
+               },
+               "quality_control_data": {
+                  "additionalProperties": true,
+                  "type": "object",
+                  "title": "Quality Control Data"
+               }
+            },
             "type": "object",
             "title": "DataAssetView"
          },
